Fix new tag in FULL_CACHE table